Fixing jumps on scroll and margins on mobile and tablet headers

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -66,6 +66,7 @@ body{
 	background-color: $gray-bg;
 	max-width: 100%;
 	overflow-x: hidden;
+	transition: 1s;
 }
 
 
