--- a/src/assets/scss/partials/cv.scss
+++ b/src/assets/scss/partials/cv.scss
@@ -30,6 +30,22 @@
 	}
 }
 
+@media (max-width: 500px){
+	#cv-container{
+		.cv-content{
+			&-videos{
+				ul{
+					li{
+						a{
+							font-size: 1.1em;
+						}
+					}
+				}
+			}
+		}	
+	}
+}
+
 @media (max-width: 400px){
 	#cv-container{
 		.cv-content{
