--- a/src/assets/scss/partials/off-canvas-menu.scss
+++ b/src/assets/scss/partials/off-canvas-menu.scss
@@ -1,6 +1,7 @@
 .off-canvas{
 	background-color: $blue;
 	z-index: 10;
+	border: none;
 }
 
 #menu-title{
