--- a/src/assets/scss/partials/video.scss
+++ b/src/assets/scss/partials/video.scss
@@ -13,6 +13,12 @@
 	}
 }
 
+@media (max-width: 640px){
+	#video-container{
+		padding-top: $baseline;
+	}
+}
+
 @media (max-width: 600px){
 	#video-container{
 		iframe{
